0.6.60-beta.4 Fixed align-items not working

--- a/scss/sin-core/grid/_flex-mixin.scss
+++ b/scss/sin-core/grid/_flex-mixin.scss
@@ -127,9 +127,13 @@ $align-self: (
                 justify-content: #{map-get($justify-content, $cur-arg)};
               }
 
-              // Align Items
+              // Align Content
               @if contains($align-content, $cur-arg) {
                 align-content: #{map-get($align-content, $cur-arg)};
+              }
+              // Align Items
+              @if contains($align-items, $cur-arg) {
+                align-items: #{map-get($align-items, $cur-arg)};
               }
 
               // Gap
@@ -159,9 +163,14 @@ $align-self: (
               justify-content: #{map-get($justify-content, $cur-arg)};
             }
 
-            // Align Items
+            // Align Content
             @if contains($align-content, $cur-arg) {
               align-content: #{map-get($align-content, $cur-arg)};
+            }
+
+            // Align Items
+            @if contains($align-items, $cur-arg) {
+              align-items: #{map-get($align-items, $cur-arg)};
             }
 
             // Gap
